landing page done

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
 
     <!-- for react-mdl -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- for font-awesome inclusion -->
+    <link rel="stylesheet" href="    https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
